# kaggle_runner

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  404.html  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  add_rmq_user  book.json  coordinator.py  index.html  kernel.py  lstm.py  main.py  mkdocs.yml  multilang_bert_data.sh  notes.md  pcc  pyproject.toml  pytest.ini  run_coordinator  runner.py  rvs_listen  setup.py  setup_mosh_server  sitemap.xml  submission.csv  test_coord.py  to_tvs  tox.ini  unet-with-se-resnext50-32x4d-encoder-for-stage-2.py  utils.py  wt
CHANGELOG/: index.html
changelog/: index.html
changlog/: index.html
credits/: index.html
docs/: credits.md  index.md
hub/: beginners-guide-to-mnist-with-fast-ai.py  gpt2l-jigsaw.ipynb  gpt2l-jigsaw.py  log.txt  shonenkov_training_pipeline.ipynb  shonenkov_training_pipeline.py  shtest.py  tpu_colab.ipynb
kaggle_runner/: __init__.py  __main__.py  callbacks.py  coordinator.py  data_providers.py  defaults.py  logs.py  losses.py  main.py  meters.py  metrics.py  optimizers.py  plots.py  post_processers.py  predictors.py  runner.py  trainer.py  transfomers.py
kaggle_runner/callbacks/: index.html
kaggle_runner/data_providers/: index.html
kaggle_runner/datasets/: bert.py  coders.py  data_handlers.py  data_prepare.py  jigsaw_toxic_data.py  mock_dataset.py  siim_dataset.py  test_dataset.py  transfomers.py
kaggle_runner/defaults/: index.html
kaggle_runner/hub/: shonenkov_training_pipeline.ipynb  shonenkov_training_pipeline.py  tpu_colab.ipynb
kaggle_runner/kernels/: KernelRunningState.py  bert.py  (+8 more)
license/: index.html
reversShells/: addNewNode.sh  fpipe  tcpservers_setup
runner_template/: kernel-metadata.json  main.py
search/: search_index.json
tests/: test_bert_torch.py  test_coord.py  test_distilbert_model.py  test_kaggleKernel.py  test_kernel_loading.py  test_kernels.py  test_logs.py  test_runner.py  test_trainer.go  test_trainer.py  test_trainerWithStatus.py
(+53 files in other folders)
