[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "kaggle_runner"
version = "0.1.8"
description = "Automatic documentation from sources, for MkDocs."
authors = ["pennz <pengyuzhou.work@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/pennz/kaggle_runner"
homepage = "https://github.com/pennz/kaggle_runner"
keywords = ["kaggle", "automation", "mkdocs", "autodoc", "documentation"]
packages = [ { include = "kaggle_runner", from = "." } ]
include = [
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.8.2"
mkdocs = "^1.1"
pymdown-extensions = ">=6.3, <8.0"
pytkdocs = ">=0.2.0, <0.7.0"
slug = "^2.0"
parse = "^1.15."
python_logging_rabbitmq = "^2.0"
colorama = "^0.4.3"
kaggle = ">=1.5"

[tool.poetry.dev-dependencies]
pip = "^20.1.1"
bandit = "^1.5"
black = "^19.10b0"
coverage = "^5.0.4"
failprint = "^0.3.0"
flake8 = "^3.6"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-builtins = "^1.5.2"
flake8-comprehensions = "^3.2.2"
flake8-docstrings = "^1.5.0"
flake8-isort = "^3.0.0"
flake8-tidy-imports = "^4.1.0"
flake8-variables-names = "^0.0.3"
git-changelog = "^0.4.0"
ipython = "^7.2"
isort = { version = "^4.3", extras = ["pyproject"] }
jinja2-cli = "^0.7.0"
mkdocs-material = ">=4.5, <6.0"
mypy = "^0.770"
pytest = "^4.3"
pytest-cov = "^2.8"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.26"
requests = "^2.24.0"
toml = "^0.10.0"
mkdocstrings = "^0.12.1"

[tool.poetry.plugins."mkdocs.plugins"]
mkdocstrings = "mkdocstrings.plugin:MkdocstringsPlugin"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "kaggle_runner"
include_trailing_comma = true
